<resources>
    <string name="app_name">MapDraw</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_app_id">AIzaSyDMZgl5NBgz8_41fC_mCutJ-OKq5wv8bcY</string>

    <!-- Googlemap menu items -->
    <string name="NormalMenu">Normal</string>
    <string name="HybridMenu">Hybrid</string>
    <string name="SatelliteMenu">Satellite</string>
    <string name="TerrainMenu">Terrain</string>

    <string name="menu_settings">Settings</string>
    <string name="hnt_et_location">Search Google Maps</string>

    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>

    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>

    <string name="ok">OK</string>
    <string name="permission_location_rationale">Location permission is needed to show the location.</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="permission_available_location">Location Permissions have been granted.</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>
</resources>
