<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout">
    <!--xmlns:tools="http://schemas.android.com/tools
    tools:context=".MapsActivity">-->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText android:imeOptions="actionSearch"
            android:id="@+id/et_location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hnt_et_location" />

        <RadioGroup
            android:id="@+id/rg_views"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_location">

            <RadioButton
                android:id="@+id/rb_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NormalMenu"
                android:checked="false" />

            <RadioButton
                android:id="@+id/rb_hybrid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/HybridMenu"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rb_satellite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SatelliteMenu"
                android:checked="false" />

            <RadioButton
                android:id="@+id/rb_terrain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TerrainMenu"
                android:checked="false" />

        </RadioGroup>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_marker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Place Marker"/>

        <Button
            android:id="@+id/btn_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Draw line"/>

        <TextView
            android:id="@+id/line_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <fragment
        android:id="@+id/map_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        class="com.google.android.gms.maps.SupportMapFragment" />

</LinearLayout>